--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
   , "dependencies": {
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
+    , "backbone": ">= 0.0.1"
+    , "underscore": ">= 0.0.1"
   }
 }
